Fix the broken navbar on mobile

--- a/less/header.less
+++ b/less/header.less
@@ -120,19 +120,19 @@ nav {
   text-align: center;
 
   .navbar-header {
-      position: absolute;
+      .navbar-brand {
+        position: absolute;
+        color: fade(@brand-colour, 70%) !important;
+        letter-spacing: 3px;
+        text-shadow: 1px 1px 1px #D9D9D9;
+        left: 5%;
+      }
   }
 
   .navbar-nav {
       float: none;
       display: inline-block;
       vertical-align: top;
-  }
-
-  .navbar-brand {
-    color: fade(@brand-colour, 70%) !important;
-    letter-spacing: 3px;
-    text-shadow: 1px 1px 1px #D9D9D9;
   }
 }
 
